Kubernetes/Services/nginx.pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: simple-nginx
          image: kishlin/simple-nginx
          ports:
            - containerPort: 80
